...
            Padding(
              padding: EdgeInsets.only(bottom: 10),
              child: MaterialButton(
                  padding: EdgeInsets.all(12),
                  color: this.isActive ? superPink : Colors.white,
                  textColor: this.isActive ? Colors.white : Colors.grey,
                  child: Text("Agree and Redeem Ticket"),
                  onPressed: () async {
                    final _bloc = BlocProvider.of<GuestDetailsBloc>(context);
                    _bloc.add(SignWaiver(widget.owner, widget.ticket, true,
                        textFieldController.text));

                    Navigator.pop(context);
...
